--- a/404.md
+++ b/404.md
@@ -15,4 +15,6 @@ permalink: /404.html
 
 Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. [Head back home]({{ site.url }}) to try finding it again
 
+Due to resource constraints, MyKahawa no longer provides detailed Nairobi Coffee Exchange transactions by dealer or producer. You can still download existing records from this website. Apologies for any inconvenience.
+
 </div>
